fixed annoying body overflow

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,6 +1,6 @@
 .app {
-  min-height: 100vh;
   overflow-x: hidden;
+  min-height: 90vh;
   &--name {
     color: #fff;
     position: fixed;
